# pycaptcha

./: LICENSE  README.md  README.rst  app.py  requirements.txt  setup.cfg  setup.py
pycaptcha/: config.py
pycaptcha/resource/: __init__.py
pycaptcha/strategy/: block_puzzle_captcha.py  captcha_strategy.py  click_word_captcha.py  simple_captcha.py
pycaptcha/utils/: image_util.py  redis_util.py
