[metadata]
name = pycaptcha
version = 1.0.0
url =
author = summerrains
author_email = summerrains@126.com
description = python captcha for web server,eg:flask
long_description = file: README.md
license =
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Framework :: Flask :: 2.3.2
    Framework :: Flask :: 3.0.3
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
include_package_data = True
zip_sage=False
python_requires = >=3.6
packages = find:
install_requires =
    redis>=4.0.2

[options.package_data]
* = *.jpg, *.png

[gh-actions]
python =
    3.8: py38, black, ruff, mypy
    3.9: py39
    3.10: py310
    3.11: py311
